add application template to handle duplicated code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="blogger.js"></script>
     <script src="router.js"></script>
 
-    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email']); </script>
+    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application']); </script>
   </head>
 
   <body>
