--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="blogger.js"></script>
     <script src="router.js"></script>
 
+    <script src="controllers/about.js"></script>
+    <script src="controllers/contact.js"></script>
+
+
     <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application']); </script>
   </head>
 
