--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="libs/ember-template-compiler-1.10.0.js"></script>
     <script src="libs/ember-1.10.0.debug.js"></script>
     <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
+    <script src="libs/ember-data.js"></script>
+    <script src="libs/localstorage_adapter.js"></script>
 
     <script src="blogger.js"></script>
     <script src="router.js"></script>
@@ -22,6 +24,9 @@
     <script src="routes/posts.js"></script>
     <script src="routes/post.js"></script>
     <script src="routes/recent-comments.js"></script>
+
+    <script src = "models/post.js"></script>
+    <script src = "models/comment.js"></script>
 
 
     <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post']); </script>
