add ability to create and save a new post using local storage

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="controllers/contact.js"></script>
     <script src="controllers/post.js"></script>
     <script src="controllers/posts.js"></script>
+    <script src="controllers/new-post.js"></script>
 
     <script src="routes/posts.js"></script>
     <script src="routes/post.js"></script>
@@ -29,7 +30,7 @@
     <script src = "models/comment.js"></script>
 
 
-    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post']); </script>
+    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post', 'new-post']); </script>
   </head>
 
   <body>
