--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="controllers/post.js"></script>
     <script src="controllers/posts.js"></script>
     <script src="controllers/new-post.js"></script>
+    <script src="controllers/new-comment.js"></script>
 
     <script src="routes/posts.js"></script>
     <script src="routes/post.js"></script>
@@ -30,7 +31,7 @@
     <script src = "models/comment.js"></script>
 
 
-    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post', 'new-post']); </script>
+    <script> EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post', 'new-post', 'new-comment']); </script>
   </head>
 
   <body>
